--- a/.github/workflows/gitbot-deps.yml
+++ b/.github/workflows/gitbot-deps.yml
@@ -214,6 +214,7 @@ jobs:
           echo "🔨 Building with updated dependencies..."
           cargo build --profile dev --locked
           cargo build --profile release --locked
+          RUSTFLAGS="-C target-cpu=x86-64" cargo build --profile pro-linux-v1 --locked --target x86_64-unknown-linux-gnu
 
           echo ""
           echo "✅ Build successful with updated deps"
