feat: embed short git commit hash in -i/--info output
Add automatic inclusion of the current git short commit hash to the
binary's build metadata and display it in the -i/--info output as
'Build: <platform> (<sha>)'. This improves traceability by making the
exact source commit visible in user-facing builds without requiring
external tools.

- Capture short git commit hash via 'git rev-parse --short=7 HEAD'
- Fallback to GITHUB_SHA (GitHub Actions) if git command unavailable
- Final fallback to empty string when neither source is available
- Embed hash via 'cargo:rustc-env=COSMOSTRIX_GIT_SHA=<sha>'
- Add 'cargo:rerun-if-env-changed=GITHUB_SHA' to rebuild on SHA change

- Add build_commit_short() helper to safely read COSMOSTRIX_GIT_SHA
- Update -i/--info output:
  - If commit hash present: 'Build: <platform> (<sha>)'
  - If not present: 'Build: <platform>'
- Maintain backward compatibility for builds without git metadata

- Relax build-id verification regex to accept optional commit hash suffix
- Update both Unix and Windows verification steps:
  - Unix: grep -E '^(build|Build): ${BUILD_ID}( \\([0-9a-f]+\\))?$'
  - Windows: regex pattern '( \\([0-9a-f]+\\))?$'
- Ensure CI passes with new output format while maintaining strict checks

- Local git builds: show 'Build: linux-x86_64-v3 (4c99736)'
- GitHub Actions builds: show 'Build: windows-x86_64 (abc1234)'
- Source tarball builds (no git): show 'Build: darwin-aarch64-native'
- All builds continue to pass release workflow verification

- cargo fmt: code formatting consistent
- cargo check: all targets compile successfully
- Manual test: 'cargo run -- -i' displays commit hash when available
- CI compatibility: release workflow regex updated to allow optional hash

Total changes: 3 files modified, 39 insertions, 3 deletions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -223,7 +223,7 @@ jobs:
           else
             OUT="$(${BIN} -i)"
             echo "${OUT}"
-            echo "${OUT}" | grep -E "^(build|Build): ${BUILD_ID}$"
+            echo "${OUT}" | grep -E "^(build|Build): ${BUILD_ID}( \\([0-9a-f]+\\))?$"
           fi
 
       - name: Verify build id
@@ -245,7 +245,7 @@ jobs:
             $outLines = & $bin -i
             $out = $outLines -join "`n"
             $out
-            $pat = "(?m)^(build|Build): " + [regex]::Escape($build) + "$"
+            $pat = "(?m)^(build|Build): " + [regex]::Escape($build) + "( \\([0-9a-f]+\\))?$"
             if ($out -notmatch $pat) {
               throw "Expected build id '$build' in cosmostrix -i output"
             }
