--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -243,9 +243,9 @@ jobs:
             }
           } else {
             $outLines = & $bin -i
-            $out = $outLines -join "`n"
+            $out = ($outLines | ForEach-Object { $_.TrimEnd("`r") }) -join "`n"
             $out
-            $pat = "(?m)^(build|Build): " + [regex]::Escape($build) + "( \\([0-9a-f]+\\))?$"
+            $pat = "(?m)^(build|Build): " + [regex]::Escape($build) + "( \\([0-9a-f]+\\))?\\s*$"
             if ($out -notmatch $pat) {
               throw "Expected build id '$build' in cosmostrix -i output"
             }
