--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,9 @@ rand = "0.9.2"
 [target.'cfg(unix)'.dependencies]
 signal-hook = "0.3.17"
 
+[target.'cfg(target_os = "linux")'.dependencies]
+libc = "0.2.160"
+
 [target.'cfg(windows)'.dependencies]
 ctrlc = "3.4.5"
 
